Fix multiselect overflow issues

--- a/_src/scss/_forms.scss
+++ b/_src/scss/_forms.scss
@@ -86,7 +86,8 @@
             box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
             background: rgba(255, 255, 255, 0.2);
             border-radius: 70.917px;
-            height: 41px;
+            min-height: 41px;
+            height: auto;
 
             .wooya-select__value-container {
                 padding: 0 30px;
